Added JavaFX HelloWorld